kubernetes/mini/core/network/ingress-nginx/external/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-nginx-external
spec:
  description: "Allow pods that require ingress to allow traffic from ingress-nginx, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/nginx-external: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: network

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: nginx-external-to-app
spec:
  description: "Allow ingress-nginx egress to pods that require ingress, no port restrictions"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: nginx-external
      io.kubernetes.pod.namespace: network

  egress:
    - toEndpoints:
        - matchLabels:
            ingress.home.arpa/nginx-external: allow
